Resolved problems with footerForm positioning & burger socials overflow

--- a/src/components/Footer/FooterForm/FooterForm.module.css
+++ b/src/components/Footer/FooterForm/FooterForm.module.css
@@ -151,7 +151,7 @@
 
 @media (max-width: 480px) {
   .footerForm {
-    margin-top: 52%;
+    padding-top: 30%;
   }
 
   .footerForm.blacked {
@@ -161,12 +161,18 @@
 
 @media (max-width: 400px) {
   .footerForm {
-    margin-top: 60%;
+    padding-top: 35%;
+  }
+}
+
+@media (max-width: 375px) {
+  .footerForm {
+    padding-top: 40%;
   }
 }
 
 @media (max-width: 350px) {
   .footerForm {
-    margin-top: 70%;
+    padding-top: 45%;
   }
 }
