--- a/src/components/Footer/FooterNavMenu/FooterFollow/FooterFollow.module.css
+++ b/src/components/Footer/FooterNavMenu/FooterFollow/FooterFollow.module.css
@@ -90,9 +90,11 @@
     left: 16%;
     max-width: 1000px;
     padding: 56px 16%;
+    overflow: hidden;
   }
   
   .footerFollow div {
+    max-height: 100%;
     margin-top: -73px;
   }
 }
